[DEV 2.6] Updated dark style css to look more like a proper dark mode and fixed the toggle css issue.

--- a/src/UI/DarkStyle.css
+++ b/src/UI/DarkStyle.css
@@ -6,12 +6,12 @@
     src: url('./Inter-SemiBold.ttf');
 }
 .root{
--fx-background-color: #000000}
+-fx-background-color: #282a36}
 
 .button {
   -fx-text-fill: #ffffff;
   -fx-font-size: 16px;
-  -fx-background-color: linear-gradient(to bottom right, #EF4765, #FF9A5A);
+  -fx-background-color: linear-gradient(to bottom right, #5F0A87, #A4508B);
   -fx-border-radius: 20;
   -fx-font-weight: 500;
   -fx-transition: box-shadow .2s ease-in-out;
@@ -28,6 +28,11 @@
   white-space: nowrap;*/
 }
 
+.toggle-button {
+  -fx-text-fill: #ffffff;
+  -fx-background-color: linear-gradient(to bottom right, #EF4765, #FF9A5A);
+}
+
 .button:focus {
   -fx-box-shadow: 0 0 .25rem rgba(0, 0, 0, 0.5), -.125rem -.125rem 1rem rgba(239, 71, 101, 0.5), .125rem .125rem 1rem rgba(255, 154, 90, 0.5);
 }
@@ -35,3 +40,35 @@
 .button:hover {
   -fx-box-shadow: 0 0 .25rem rgba(0, 0, 0, 0.5), -.125rem -.125rem 1rem rgba(239, 71, 101, 0.5), .125rem .125rem 1rem rgba(255, 154, 90, 0.5);
 }
+
+// Background color of the whole context menu
+   .choice-box .context-menu { -fx-background-color: #282a36; }
+// Focused item background color in the list
+   .choice-box .menu-item:focused { -fx-background-color: orange; }
+// Text color of non-focused items in the list
+   .choice-box .menu-item > .label { -fx-text-fill: white; }
+// Text color of focused item in the list
+   .choice-box .menu-item:focused > .label { -fx-text-fill: black; }
+
+// Background color of the control itself
+   .choice-box {
+       -fx-background-color: black;
+       -fx-mark-color: orange; // arrow color
+   }
+
+// Selected item text color on the control itself
+   .choice-box > .label { -fx-text-fill: white; }
+
+slider {
+    -fx-pref-width: 400px;
+}
+.slider .track {
+    -fx-background-color: linear-gradient(to left, #F9D976, #F39F86);
+}
+.slider .thumb {
+    -fx-pref-height: 20px;
+    -fx-pref-width: 10px;
+    -fx-background-color: linear-gradient(to top, white, whitesmoke);
+}
+
+.slider .axis { -fx-tick-label-fill: white; }
